[gd_scene load_steps=14 format=3 uid="uid://b2swtptynlu7f"]

[ext_resource type="Script" uid="uid://8j06xcdxl1vg" path="res://scripts/fase_1_3.gd" id="1_nb2ip"]
[ext_resource type="Texture2D" uid="uid://d4fb34s5wwsfu" path="res://assets/backgrounds/background.png" id="2_2hcfl"]
[ext_resource type="Texture2D" uid="uid://bmxeirivvp3th" path="res://assets/btn.png" id="3_f7t8a"]
[ext_resource type="Texture2D" uid="uid://cghsynxxxusv1" path="res://assets/sol.png" id="4_fmo12"]
[ext_resource type="Texture2D" uid="uid://cic7dac3icmgf" path="res://assets/agua.png" id="5_686fl"]
[ext_resource type="AudioStream" uid="uid://dlfim2ja4ogdy" path="res://assets/audios/Som-de-clique-de-mouse-Efeito-Sonoro.ogg" id="5_f58md"]
[ext_resource type="Texture2D" uid="uid://bkpr8lbba1q1f" path="res://assets/vento.png" id="6_qguph"]
[ext_resource type="Texture2D" uid="uid://b55cjntjc6jop" path="res://assets/item_solar.png" id="7_wmn2r"]
[ext_resource type="Texture2D" uid="uid://bdqmc4i055vu" path="res://assets/item_eolica.png" id="8_0w4uv"]
[ext_resource type="Texture2D" uid="uid://l42vu2hmdtw0" path="res://assets/item_hidreletrica.png" id="9_420ku"]
[ext_resource type="Texture2D" uid="uid://hakiq5v7etll" path="res://assets/divisao.png" id="10_v2sgr"]
[ext_resource type="Texture2D" uid="uid://bh836apgwxtye" path="res://assets/botao voltar.png" id="12_f7t8a"]
[ext_resource type="Texture2D" uid="uid://bmcr6p6h54h5h" path="res://assets/proximo nivel.png" id="13_fmo12"]

[node name="Fase13" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_nb2ip")

[node name="fundo" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_2hcfl")

[node name="explicacao_container" type="Control" parent="."]
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="titulo_label" type="Label" parent="explicacao_container"]
layout_mode = 0
offset_left = 784.0
offset_top = 32.0
offset_right = 1063.0
offset_bottom = 67.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 25
text = "ENERGIAS RENOVAVEIS"

[node name="texto_label" type="Label" parent="explicacao_container"]
layout_mode = 0
offset_left = 480.0
offset_top = 328.0
offset_right = 705.0
offset_bottom = 363.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 25
text = "TEXO EXPLICATIVO"

[node name="button_continuar" type="TextureButton" parent="explicacao_container"]
layout_mode = 0
offset_left = 456.0
offset_top = 472.0
offset_right = 714.0
offset_bottom = 542.0
texture_normal = ExtResource("3_f7t8a")

[node name="explicacao_label" type="Label" parent="explicacao_container"]
layout_mode = 0
offset_left = 112.0
offset_top = 16.0
offset_right = 246.0
offset_bottom = 51.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 25
text = "EXPLICACO"

[node name="exercicio_container" type="Control" parent="."]
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="fase3_label" type="Label" parent="exercicio_container"]
layout_mode = 0
offset_left = 88.0
offset_top = 32.0
offset_right = 181.0
offset_bottom = 67.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 25
text = "FASE 03"

[node name="instrucao_label" type="Label" parent="exercicio_container"]
layout_mode = 0
offset_left = 512.0
offset_top = 24.0
offset_right = 1102.0
offset_bottom = 59.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 25
text = "RELACIONE AS ENERGIAS COM SEUS ELEMNNTOS"

[node name="area_fontes" type="Control" parent="exercicio_container"]
anchors_preset = 0
offset_left = 240.0
offset_top = 160.0
offset_right = 944.0
offset_bottom = 264.0

[node name="fonte_sol" type="TextureButton" parent="exercicio_container/area_fontes"]
layout_mode = 0
offset_left = 79.0
offset_top = 18.0
offset_right = 227.0
offset_bottom = 114.0
texture_normal = ExtResource("4_fmo12")
stretch_mode = 0

[node name="fonte_agua" type="TextureButton" parent="exercicio_container/area_fontes"]
layout_mode = 0
offset_left = 256.0
offset_top = 8.0
offset_right = 408.0
offset_bottom = 120.0
texture_normal = ExtResource("5_686fl")
stretch_mode = 0

[node name="fonte_vento" type="TextureButton" parent="exercicio_container/area_fontes"]
layout_mode = 0
offset_left = 472.0
offset_top = 32.0
offset_right = 572.0
offset_bottom = 106.0
texture_normal = ExtResource("6_qguph")

[node name="area_energias" type="Control" parent="exercicio_container"]
anchors_preset = 0
offset_left = 280.0
offset_top = 320.0
offset_right = 904.0
offset_bottom = 448.0

[node name="energia_solar" type="TextureButton" parent="exercicio_container/area_energias"]
layout_mode = 0
offset_left = 440.0
offset_top = 8.0
offset_right = 544.0
offset_bottom = 102.0
texture_normal = ExtResource("7_wmn2r")
stretch_mode = 0

[node name="energia_eolica" type="TextureButton" parent="exercicio_container/area_energias"]
layout_mode = 0
offset_left = 240.0
offset_top = 8.0
offset_right = 336.0
offset_bottom = 104.0
texture_normal = ExtResource("8_0w4uv")
stretch_mode = 0

[node name="energia_hidreletrica" type="TextureButton" parent="exercicio_container/area_energias"]
layout_mode = 0
offset_left = 32.0
offset_top = -8.0
offset_right = 176.0
offset_bottom = 112.0
texture_normal = ExtResource("9_420ku")
stretch_mode = 0

[node name="feedback_label" type="Label" parent="exercicio_container"]
layout_mode = 0
offset_left = 552.0
offset_top = 272.0
offset_right = 592.0
offset_bottom = 295.0

[node name="button_restart" type="TextureButton" parent="exercicio_container"]
layout_mode = 0
offset_left = 448.0
offset_top = 472.0
offset_right = 706.0
offset_bottom = 542.0
texture_normal = ExtResource("3_f7t8a")

[node name="button_continuar" type="TextureButton" parent="exercicio_container"]
layout_mode = 0
offset_left = 448.0
offset_top = 472.0
offset_right = 706.0
offset_bottom = 542.0
texture_normal = ExtResource("3_f7t8a")

[node name="divisoria" type="TextureRect" parent="exercicio_container"]
layout_mode = 0
offset_left = 264.0
offset_top = 296.0
offset_right = 944.0
offset_bottom = 328.0
texture = ExtResource("10_v2sgr")

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
visible = false
stream = ExtResource("5_f58md")

[node name="label_vitoria" type="Label" parent="."]
visible = false
layout_mode = 0
offset_left = 520.0
offset_top = 312.0
offset_right = 560.0
offset_bottom = 335.0

[node name="votar_button" type="TextureButton" parent="."]
layout_mode = 0
offset_left = 19.0
offset_top = 583.0
offset_right = 215.0
offset_bottom = 629.0
texture_normal = ExtResource("12_f7t8a")

[node name="botao_proximo" type="TextureButton" parent="."]
layout_mode = 0
offset_left = 986.0
offset_top = 336.0
offset_right = 1132.0
offset_bottom = 376.0
texture_normal = ExtResource("13_fmo12")

[connection signal="pressed" from="votar_button" to="." method="_on_votar_button_pressed"]
[connection signal="pressed" from="botao_proximo" to="." method="_on_botao_proximo_pressed"]
